# crypto-regime-classifier-git-init

./: .gitignore  Dockerfile  PROJECT_SPEC.md  README.md  TEACHING_GUIDE.md  docker-compose.yml  pyproject.toml
app/: streamlit_app.py
configs/: api.yaml  dashboard.yaml  data.yaml  evaluation.yaml  features.yaml  label_binary.yaml  label_multiclass.yaml  model.yaml  monitoring.yaml  serving.yaml  splitting.yaml
data/interim/: .gitkeep
docs/: SCOPE_AND_VARIANTS.md
models/saved/: .gitkeep
reports/: calibration_report.md  data_card.md  data_quality_report.md  feature_engineering_report.md  feature_schema.json  label_binary_config.json  label_binary_report.md  model_card.md  model_report.md  model_training_report.md  monitoring_report.md  split_manifest.json  split_report.md
reports/figures/: .gitkeep
src/crypto_regime/: __init__.py
src/crypto_regime/api/: __init__.py  main.py  schemas.py
src/crypto_regime/dashboard/: __init__.py  loaders.py  plots.py
src/crypto_regime/data/: __init__.py  download.py  load.py  resample.py  validate.py
src/crypto_regime/evaluation/: __init__.py  evaluate.py  metrics.py
src/crypto_regime/features/: build_features.py
src/crypto_regime/inference/: __init__.py  batch_predict.py
src/crypto_regime/labels/: binary.py  multiclass.py
src/crypto_regime/models/: __init__.py  base.py  (+7 more)
tests/: test_api.py  test_dashboard.py  test_data_download.py  test_data_validation.py  test_evaluation.py  test_features.py  test_labels.py  test_labels_binary.py  test_modeling.py  test_monitoring.py  test_serving.py  test_splitting.py
(+13 files in other folders)
