[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-regime-classifier"
version = "0.1.0"
description = "A time-series ML project for classifying cryptocurrency market regimes."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Crypto Regime Classifier Project" }
]
dependencies = [
  "fastapi>=0.111",
  "joblib>=1.4",
  "numpy>=1.26",
  "pandas>=2.2",
  "plotly>=5.22",
  "pyarrow>=15",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "requests>=2.32",
  "scikit-learn>=1.5",
  "streamlit>=1.36",
  "uvicorn[standard]>=0.30"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.5"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
